src/components/ProfilePost/ProfilePost.scss
@import "../../App.scss";

.profilePost {
  height: fit-content;
  width: 100%;
  margin: 20px 0;
  border: 1px solid $brand-color;
  // padding: 10px;
  border-radius: 1px;
  // padding: 5px;
  @include flexSpaceBetween(column);
  box-shadow: 0px 0px 3px 3px #e9e9e9;


  .profilePostMain {
    @include flexSpaceBetween(row);
    width: 100%;

    @media screen and (max-width: $break-tablet) {
      @include flexSpaceBetween(column);
    }

    .profileMap {
      height: 200px;
      width: 50%;
      border-radius: 1px;
      margin-bottom: 15px;

      @media screen and (max-width: $break-tablet) {
        width: 90%;
        margin-top: 15px;
      }
    }

    #profilePostContent {
      @include flexSpaceAround(column);
      width: 50%;
      height: fit-content;
      max-height: 200px;

      @media screen and (max-width: $break-tablet) {
        width: 90%;
      }

      h1 {
        font-size: 2.5em;
        font-family: $header-font;
        color: $brand-color-dark;
        margin: 10px 0;

        @media screen and (max-width: $break-tablet) {
          font-size: 2em;
        }
      }

      h3 {
        font-size: 1.3em;
        font-family: $header-font;
        color: $brand-color;

        @media screen and (max-width: $break-tablet) {
          font-size: 1em;
        }
      }

      button {
        width: 80%;
        height: 40px;
        border: 1px solid $brand-color;
        border-radius: 1px;
        color: $brand-color-dark;
        font-size: 1em;
        margin: 15px;
        margin-bottom: 0;
        background: #fff;

        @media screen and (max-width: $break-tablet) {
          width: 100%;
        }
      }
    }
  }

  #profilePostContent {
    height: fit-content;
    width: 100%;
    padding: 0 20px;
    padding-bottom: 5px;
    @include flexCenter(column);
    color: $brand-color-dark;
    text-align: left;

    h5 {
      color: $brand-color;
      font-size: 1.1em;
      margin-top: 10px;
    }

    p {
      font-size: 1em;
    }

    #editDelete {
      text-align: right;

      i {
        margin: 5px;
        margin-bottom: 0;
      }
    }
  }

  .open {
    display: block !important;
  }

  .closed {
    display: none !important;
  }
}

